Implemented Google libphonenumber library to add E.164 phone number parsing and formatting. Updated Account and User phone numbers to be strictly E.164 to ensure SMS messaging is successful.

--- a/src/main/resources/db/changelog/test/user_phone.yaml
+++ b/src/main/resources/db/changelog/test/user_phone.yaml
@@ -14,7 +14,7 @@ databaseChangeLog:
                   value: MOBILE
               - column:
                   name: phone_number
-                  value: 1234567718
+                  value: +16518886021
               - column:
                   name: is_validated
                   valueBoolean: false
@@ -50,7 +50,7 @@ databaseChangeLog:
                   value: OFFICE
               - column:
                   name: phone_number
-                  value: 1234567151
+                  value: +16518886022
               - column:
                   name: is_validated
                   valueBoolean: false
