--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ app:
     email: support@LighthouseSoftware.com
     phone: 651-888-6021
     website: http://LighthouseSoftware.com/support
+  default-country: US
 
 #######################################################################################################################
 # Logging
