Updated application.yaml to turn off auto stack detection for AWS Cloud Formation. cloud.aws.stack.auto = false

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -114,6 +114,8 @@ security:
 cloud:
   aws:
     enabled: false
+    stack:
+      auto: false
     credentials:
       accessKey: ENTER YOUR CODE
       secretKey: ENTER YOUR CODE
