Fixed missing profile on the test data file.

--- a/src/main/resources/db/changelog/test/user_phone.yaml
+++ b/src/main/resources/db/changelog/test/user_phone.yaml
@@ -2,6 +2,7 @@ databaseChangeLog:
   - changeSet:
       id: v1.0-test-user-phone-seed
       author: Laxman Bandi
+      context: test
       changes:
         - insert:
             tableName: user_phone
