Added a BootRun task wrapper that will expose the System.properties to the gradle task. This is helpful when testing overriding environment variables within the local environment.

--- a/build.gradle
+++ b/build.gradle
@@ -170,3 +170,9 @@ task apidoc(type:NpmTask, dependsOn:'apidocInstall') {
 }
 processResources.dependsOn.add(apidoc)
 
+// ****************************************************************************
+// Pass environment variables to Spring BootRun task when running from Gradle
+// ****************************************************************************
+tasks.withType(org.springframework.boot.gradle.run.BootRunTask) {
+    bootRun.systemProperties = System.properties
+}
