--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -134,6 +134,8 @@ security:
 cloud:
   aws:
     enabled: false
+    stack:
+      auto: false
     credentials:
       accessKey: ENTER YOUR CODE
       secretKey: ENTER YOUR CODE
