--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,13 +42,13 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        dialect: org.hibernate.dialect.H2Dialect
 
   datasource:
-    url: jdbc:mysql://localhost:3306/voyage?useSSL=false&autoReconnect=true
-    username: voyage
-    password: voyage
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:h2:mem:voyage
+    username: sa
+    password: 
+    driver-class-name: org.h2.Driver
 
   mail:
       host: localhost
