--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile group: 'org.springframework.boot',          name: 'spring-boot-starter-security',        version:"${springBootVersion}"
     compile group: 'org.springframework.boot',          name: 'spring-boot-starter-mail',            version:"${springBootVersion}"
     compile group: 'org.springframework.boot',          name: 'spring-boot-starter-freemarker',      version:"${springBootVersion}"
+    compile group: 'org.passay',                        name: 'passay',                              version: '1.2.0'
     compile group: 'org.springframework.security',      name: 'spring-security-jwt',                 version:'1.0.7.RELEASE'
     compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',             version:'2.0.12.RELEASE') {
         exclude(module: 'jackson-mapper-asl') // We already have a more recent jackson via Spring Boot
