Implemented the Invalidate OAuth Tokens Servlet Filter, which examines the incoming OAuth2 token, enforces that the token have a 'created' date, verifies that the client and user are not disabled in any way, then compares the created date to ensure it's AFTER the forced invalidation date on the User or Client records.

--- a/src/main/resources/db/changelog/v1-0/client.yaml
+++ b/src/main/resources/db/changelog/v1-0/client.yaml
@@ -54,6 +54,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: force_tokens_expired_date
+                  type: datetime
+                  constraints:
+                    nullable: true
+              - column:
                   name: is_enabled
                   type: bit(1)
                   constraints:
@@ -145,6 +150,11 @@ databaseChangeLog:
                   type: int
                   constraints:
                     nullable: false
+              - column:
+                  name: force_tokens_expired_date
+                  type: datetime
+                  constraints:
+                    nullable: true
               - column:
                   name: is_enabled
                   type: bit(1)
