--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -112,7 +112,7 @@ security:
     exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp, /api/**/profile
     verify-code-expire-minutes: 30
   password-verification:
-    exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp, /api/**/profile, /api/**/profile/password
+    exclude-resources: /api/**/users
     password-reset-days: 90
 
   cors:
