--- a/src/main/resources/db/changelog/test/user.yaml
+++ b/src/main/resources/db/changelog/test/user.yaml
@@ -52,6 +52,9 @@ databaseChangeLog:
               - column:
                   name: last_modified_date
                   value: "2013-03-19 16:57:04"
+              - column:
+                  name: password_created_date
+                  value: "2017-04-20 00:00:00"
 
 
         - insert:
@@ -102,3 +105,6 @@ databaseChangeLog:
               - column:
                   name: last_modified_date
                   value: "2013-03-19 16:57:04"
+              - column:
+                  name: password_created_date
+                  value: "2017-04-20 00:00:00"
