--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -92,6 +92,13 @@ security:
           zQIDAQAB
           -----END PUBLIC KEY-----
 
+  http-audit-log:
+    exclude-resources: /resources/**, /webjars/**, /docs/**
+    form-username-fields: username
+    mask-fields: password, client-secret, authorization
+    store-request-body: true
+    store-response-body: true
+
   user-verification:
     exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp
     verify-code-expire-minutes: 30
@@ -107,6 +114,22 @@ security:
 
   cors:
     access-control-allow-headers: Accept, Authorization, Content-Type, Cookie, Origin, User-Agent
+
+  brute-force-attack:
+    sleep-after-failure:
+      enabled: false
+      http-status-failure-list: 401, 403, 404
+      min-sleep-seconds: 3
+      max-sleep-seconds: 8
+
+    client-lock-basic-auth-filter:
+      enabled: false
+      resources: /oauth/**
+      max-login-attempts: 5
+
+    user-lock-event-listener:
+      enabled: false
+      max-login-attempts: 5
 
 #######################################################################################################################
 # AWS Configuration to send Emails and SMS
