--- a/build.gradle
+++ b/build.gradle
@@ -89,11 +89,13 @@ dependencies {
     compile group: 'org.springframework.cloud',         name: 'spring-cloud-aws-messaging',          version: '1.1.3.RELEASE'
 
     // Other
-    compile group: 'org.apache.commons',            name: 'commons-lang3',  version: '3.5'
-    compile group: 'commons-codec',                 name: 'commons-codec',  version: '1.10'
-    compile group: 'org.owasp.esapi',               name: 'esapi',          version: '2.1.0.1'
-    compile group: 'com.googlecode.libphonenumber', name: 'libphonenumber', version: '8.4.0'
-    
+    compile group: 'org.apache.commons',            name: 'commons-lang3',          version: '3.5'
+    compile group: 'commons-codec',                 name: 'commons-codec',          version: '1.10'
+    compile group: 'org.owasp.esapi',               name: 'esapi',                  version: '2.1.0.1'
+    compile group: 'com.googlecode.libphonenumber', name: 'libphonenumber',         version: '8.4.0'
+    compile group: 'io.springfox',                  name: 'springfox-swagger2',     version: '2.8.0'
+    compile group: 'io.springfox',                  name: 'springfox-swagger-ui',   version: '2.8.0'
+
     // Testing
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:"${springBootVersion}") {
         exclude(module: 'commons-logging')
