--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -76,7 +76,7 @@ server:
 security:
 
   ignored: /resources/**, /webjars/**, /docs, /docs/**
-  permitAll: /login, /api/status, /api/**/profile
+  permitAll: /login, /api/status, /api/**/profile, /swagger-resources/**, /swagger-ui.html, /api/api-docs**
 
   # FOR PRODUCTION: The following MUST be overridden to ensure secrecy of the passwords for the keystore and private
   # See where you can override at https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-external-config.html
@@ -112,14 +112,14 @@ security:
           -----END PUBLIC KEY-----
 
   http-audit-log:
-    exclude-resources: /resources/**, /webjars/**, /docs/**
+    exclude-resources: /resources/**, /webjars/**, /docs/**, /swagger-resources/**, /swagger-ui.html, /api/api-docs**
     form-username-fields: username
     mask-fields: password, client-secret, authorization
     store-request-body: true
     store-response-body: true
 
   user-verification:
-    exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp, /api/**/profile
+    exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /swagger-resources/**, /swagger-ui.html, /api/api-docs**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp, /api/**/profile
     verify-code-expire-minutes: 30
 
   cors:
@@ -158,3 +158,11 @@ cloud:
     region:
       auto: true
       static: us-east-1
+#######################################################################################################################
+# SpringFox Swagger 2 api-docs
+#######################################################################################################################
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path: /api/api-docs
