Updated /profile to be /profiles/register Fixed issue in /profiles/register with 500 error returning when bad PhoneType value passed in Fixed issue in /profiles/register with user created not having a default user role

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -59,6 +59,9 @@ security:
   ignored: /resources/**, /webjars/**
   permitAll: /login, /api/status
 
+  user-roles:
+    default-authority: role.standard_user
+
   # FOR PRODUCTION: The following MUST be overridden to ensure secrecy of the passwords for the keystore and private
   # See where you can override at https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-external-config.html
   key-store:
