--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -76,7 +76,10 @@ server:
 security:
 
   ignored: /resources/**, /webjars/**, /docs, /docs/**
-  permitAll: /login, /api/status, /api/**/profile
+  permitAll: /login, /api/status, /api/**/profiles/register
+
+  user-roles:
+    default-authority: role.standard_user
 
   # FOR PRODUCTION: The following MUST be overridden to ensure secrecy of the passwords for the keystore and private
   # See where you can override at https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-external-config.html
@@ -119,7 +122,7 @@ security:
     store-response-body: true
 
   user-verification:
-    exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp, /api/**/profile
+    exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp, /api/**/profiles/register
     verify-code-expire-minutes: 30
 
   cors:
