--- a/src/main/resources/db/changelog/v1-0/user.yaml
+++ b/src/main/resources/db/changelog/v1-0/user.yaml
@@ -36,6 +36,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: password_created_date
+                  type: datetime
+                  constraints:
+                    nullable: false
+              - column:
                   name: email
                   type: nvarchar(255)
                   constraints:
@@ -144,6 +149,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: password_created_date
+                  type: datetime
+                  constraints:
+                    nullable: false
+              - column:
                   name: email
                   type: nvarchar(255)
                   constraints:
@@ -228,6 +238,9 @@ databaseChangeLog:
                   name: password
                   value: $2a$10$.Qa2l9VysOeG5M8HhgUbQ.h8KlTBLdMY/slPwMtL/I5OYibYUFQle
               - column:
+                  name: password_created_date
+                  valueDate: ${now}
+              - column:
                   name: email
                   value: support@LighthouseSoftware.com
               - column:
@@ -275,6 +288,9 @@ databaseChangeLog:
               - column:
                   name: password
                   value: $2a$10$.Qa2l9VysOeG5M8HhgUbQ.h8KlTBLdMY/slPwMtL/I5OYibYUFQle
+              - column:
+                  name: password_created_date
+                  valueDate: ${now}
               - column:
                   name: email
                   value: standard@user.com
