--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -106,6 +106,10 @@ security:
     exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp
     verify-code-expire-minutes: 30
 
+  password-verification:
+    exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp, /api/**/profiles/register
+    password-reset-days: 90
+
   test:
     clients:
         super-client:
