--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -169,3 +169,35 @@ springfox:
     swagger:
       v2:
         path: /api/api-docs
+#######################################################################################################################
+# API Long Notes for Swagger
+#######################################################################################################################
+controller:
+  verify:
+    workflow:      <h3>VERIFY WORKFLOW</h3>
+                              <p>The user verification process is a two-step workflow that is required when a user has been flagged as needing
+                               to assert that they are truly in control of their profile. A user might be flagged for verification for any
+                               reason at any time. The consumer of this API must be prepared to handle a user verification error response
+                               (401 HTTP Status with errorCode 401_verify_user) for any API call made at any time.<p>
+                              <br>
+                               <p>The verification process requires that the user authenticates with the API using their username and password,
+                               and then enters a code that they receive through a pre-approved SMS text message platform (ie mobile phone).
+                               Once the user receives the verification code on their mobile device, the app they are interacting with should provide
+                               the means to enter the code and pass the code to the POST /verify web service. The /verify service will confirm
+                               that the code provided matches the one on file for their device. Once the valid code has been confirmed,
+                               then the user can resume making their calls to the API. Until the user verification is completed, the user will
+                               not be able to make any API calls other than the 'Verify' API web services.</p>
+
+
+                              <ol>
+                               <li> Consumer invokes an API (ie /profile)
+                                  API replies with a 401 HTTP Status
+                                  Response body includes an error code of 401_verify_user
+                               <li>Consumer invokes GET /verify/send
+                                  API sends verification codes to the mobile phones associated with the user's profile
+                                  Response includes a success status code
+                               <li>Consumer invokes POST /verify
+                                  API receives the verification code and validates the user
+                                  Response includes a success or failure status code with error message
+                               <li>Consumer invokes an API (ie /profile)
+                                  Resumes accessing the API</ol>
