--- a/src/main/resources/db/changelog/v1-0/client_redirect.yaml
+++ b/src/main/resources/db/changelog/v1-0/client_redirect.yaml
@@ -26,6 +26,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: client_redirect_type
+                  type: nvarchar(255)
+                  constraints:
+                    nullable: false
+              - column:
                   name: created_by
                   type: nvarchar(255)
                   constraints:
@@ -86,6 +91,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: client_redirect_type
+                  type: nvarchar(255)
+                  constraints:
+                    nullable: false
+              - column:
                   name: created_by
                   type: nvarchar(255)
                   constraints:
@@ -124,6 +134,36 @@ databaseChangeLog:
                   name: redirect_uri
                   value: http://localhost:8080/oauth
               - column:
+                  name: client_redirect_type
+                  value: OAUTH
+              - column:
+                  name: created_by
+                  value: super
+              - column:
+                  name: created_date
+                  valueDate: ${now}
+              - column:
+                  name: last_modified_by
+                  value: super
+              - column:
+                  name: last_modified_date
+                  valueDate: ${now}
+              - column:
+                  name: is_deleted
+                  valueBoolean: false
+        - insert:
+            tableName: client_redirect
+            columns:
+              - column:
+                  name: client_id
+                  valueNumeric: 1
+              - column:
+                  name: redirect_uri
+                  value: http://localhost:3001/password/reset
+              - column:
+                  name: client_redirect_type
+                  value: PASSWORD_RESET
+              - column:
                   name: created_by
                   value: super
               - column:
@@ -147,6 +187,36 @@ databaseChangeLog:
               - column:
                   name: redirect_uri
                   value: http://localhost:8080/oauth
+              - column:
+                  name: client_redirect_type
+                  value: OAUTH
+              - column:
+                  name: created_by
+                  value: super
+              - column:
+                  name: created_date
+                  valueDate: ${now}
+              - column:
+                  name: last_modified_by
+                  value: super
+              - column:
+                  name: last_modified_date
+                  valueDate: ${now}
+              - column:
+                  name: is_deleted
+                  valueBoolean: false
+        - insert:
+            tableName: client_redirect
+            columns:
+              - column:
+                  name: client_id
+                  valueNumeric: 2
+              - column:
+                  name: redirect_uri
+                  value: http://localhost:3001/password/reset
+              - column:
+                  name: client_redirect_type
+                  value: PASSWORD_RESET
               - column:
                   name: created_by
                   value: super
