--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -109,6 +109,7 @@ security:
   password-verification:
     exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp, /api/**/profiles/register
     password-reset-days: 90
+    password-reset-token-expires-minutes: 45
 
   test:
     clients:
