--- a/src/main/resources/db/changelog/test/user_phone.yaml
+++ b/src/main/resources/db/changelog/test/user_phone.yaml
@@ -70,3 +70,39 @@ databaseChangeLog:
               - column:
                   name: is_deleted
                   valueBoolean: false
+        - insert:
+            tableName: user_phone
+            columns:
+              - column:
+                  name: user_id
+                  valueComputed: (SELECT id FROM user WHERE username = 'client-standard')
+              - column:
+                  name: phone_type
+                  value: MOBILE
+              - column:
+                  name: phone_number
+                  value: +16518886021
+              - column:
+                  name: is_validated
+                  valueBoolean: false
+              - column:
+                  name: verify_code
+                  value: $2a$10$ard2nk.muYlGgiHkr3JX2OGCA0Lcu2Cy5BNGWbq0DhVDpqU.GfnN6
+              - column:
+                  name: verify_code_expires_on
+                  valueDate: ${future}
+              - column:
+                  name: created_by
+                  value: super
+              - column:
+                  name: created_date
+                  valueDate: ${now}
+              - column:
+                  name: last_modified_by
+                  value: super
+              - column:
+                  name: last_modified_date
+                  valueDate: ${now}
+              - column:
+                  name: is_deleted
+                  valueBoolean: false
