--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -76,7 +76,7 @@ server:
 security:
 
   ignored: /resources/**, /webjars/**, /docs, /docs/**
-  permitAll: /login, /api/status, /api/**/password/*, /api/**/profiles/register
+  permitAll: /login, /api/status, /api/**/password/*, /oauth/password-reset-request, /oauth/password-reset, /api/**/profiles/register
 
   user-roles:
     default-authority: role.standard_user
@@ -129,6 +129,7 @@ security:
     exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp, /api/**/profiles/register
     password-reset-days: 90
     password-reset-token-expires-minutes: 45
+    password-reset-identity-server-redirect-url: http://localhost:8080/oauth/password-reset
 
   cors:
     enabled: true
